fixed issue with vertical spacing in second column, added iframe and color gradient

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,10 @@
 *{
     border: 1px solid red;
 }
-section{
+/* section{
     display: flex;
-    border: 1px solid red;
-    justify-content: space-between;
+    border: 1px solid red; //Doesn't really do anything
+    justify-content: space-between; */
 }
 
 div {
@@ -31,11 +31,18 @@ body{
     flex-wrap: wrap;
 }
 
-.mainBox , .bottomBox{
+.mainBox{
     height: 600px;
     margin-top: 0;
-    background: lightblue;
+    /* background: lightblue; */
+    background: linear-gradient(rgb(0, 0, 0) 10%, rgb(44, 44, 44) 97%, rgb(67, 67, 67) 100%);
     justify-content: center;
+}
+
+.bottomBox{
+    height: 600px;
+    background: orange;
+    align-items: flex-start;
 }
 
 nav {
@@ -75,13 +82,13 @@ li{
 
 .bottomBox {
     border: 1px solid pink;
-    align-items: ;
+    align-content: flex-start; //This is what fixed the height spacing issue
+
 }
 
 h2{
     font-size: 3rem;
-    display: block;
-    height: 10%;
+    /* height: 10%; */
     width: 99%;
     text-align: center;
     margin: 0
@@ -94,13 +101,29 @@ h2{
     height: 10%;
     width: 100%;
     margin-top: 5px;
-    align-items: flex-start;
+    /* align-content: flex-start; */
 }
 
 .bottomList{
-    justify-content: flex-start;
+    justify-content: space-around;
+    flex-basis: 99%;
+    height: 40px;
+    align-items: center;
 }
+
 .botLi{
     border: 1px solid red;
     flex-basis: auto;
+    height: 30px;
+    text-align: center;
+    align-items
+}
+
+.bottomBox:nth-
+
+.bottomBox iframe{
+    display: flex;
+    width: 400px;
+    height: 500px;
+    align-self: flex-end;
 }
